Update flower titles and change flower types

--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
 </head>
 <body>
 
-    <h1>Pastel Dreams</h1>
+    <h1>Merry Pastel Flowers</h1>
 
     <div class="flower f1">🌸</div>
-    <div class="flower f2">🌸</div>
-    <div class="flower f3">🌸</div>
-    <div class="flower f4">🌸</div>
-    <div class="flower f5">🌸</div>
-    <div class="flower f6">🌸</div>
-    <div class="flower f7">🌸</div>
+    <div class="flower f2">🌺</div>
+    <div class="flower f3">🌷</div>
+    <div class="flower f4">🌹</div>
+    <div class="flower f5">🌹</div>
+    <div class="flower f6">🌷</div>
+    <div class="flower f7">🌺</div>
     <div class="flower f8">🌸</div>
     <div class="flower f1" style="left: 50%; animation-delay: 7s;">🌸</div>
     <div class="flower f3" style="left: 80%; animation-delay: 9s;">🌸</div>
